Implemented connection check

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcuv2]
-; platform = espressif8266@1.8.0
-platform = https://github.com/esp8266/Arduino.git
+platform = espressif8266@1.8.0
 board = nodemcuv2
 framework = arduino
 upload_speed = 115200
