--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266@1.8.0
+[env]
+; platform = espressif8266@1.8.0
+; platform = espressif8266@2.2.3
+platform = espressif8266
+; platform_packages = framework-arduinoespressif8266 @ https://github.com/Jeroen88/Arduino.git
+; platform_packages = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git ; use upstream Git version
 board = nodemcuv2
 framework = arduino
 upload_speed = 115200
 ; upload_speed = 230400
 ; upload_speed = 460800
 build_flags = -Wl,-Teagle.flash.4m1m.ld
-; build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
 monitor_speed = 115200
+; build_flags = -DDEBUG_ESP_PORT=Serial   -DDEBUG_ESP_HTTP_UPDATE
+
+[env:debug]
+build_flags = -D DEBUG
+
+[env:release]
