implement common timer

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@
 
 [env]
 ; platform = espressif8266@1.8.0
-platform = espressif8266@2.2.3
-; platform = espressif8266
+; platform = espressif8266@2.2.3
+platform = espressif8266
 ; platform_packages = framework-arduinoespressif8266 @ https://github.com/Jeroen88/Arduino.git
 ; platform_packages = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git ; use upstream Git version
 board = nodemcuv2
