Settings server and OTA update libs.

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,13 +17,13 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 ; upload_speed = 115200
-upload_speed = 230400
+; upload_speed = 230400
 ; upload_speed = 460800
+upload_speed = 921600
 build_flags = -Wl,-Teagle.flash.4m1m.ld
 monitor_speed = 115200
-; build_flags = -DDEBUG_ESP_PORT=Serial   -DDEBUG_ESP_HTTP_UPDATE
 
 [env:debug]
-build_flags = -D DEBUG
+build_flags = -D DEBUG_BUILD
 
 [env:release]
